AM_CPPFLAGS = -Wall -Wextra -Wmissing-prototypes -g $(all_includes)

noinst_LIBRARIES = libtones.a

libtones_a_SOURCES = \
	tones.c \
	patterns.c \
	german_outoforder.c \
	oldgerman_outoforder.c \
	american_congestion.c \
	american_outoforder.c \
	american_invalidnumber.c \
	american_noanswer.c \
	denmark_outoforder.c \
	uk_outoforder.c \
	france_outoforder.c
